--- a/packinglist.html
+++ b/packinglist.html
@@ -59,8 +59,8 @@
         some nice socks with you to walk on! Tip: you can buy glow in the dark
         socks</h2>
 
+      <h2> General </h2>
       <ul id="packing">
-      <li> general </li>
       <li> ID card/passport </li>
       <li> Money (cash) </li>
       <li> Student card / proof of school registration </li>
