packing list geupdated

--- a/packinglist.html
+++ b/packinglist.html
@@ -50,21 +50,69 @@
     </div>
     <div class="main" id="main">
       <h1>Packing List</h1>
-
-      <p> So you don't forget some things. Beware that you are responsible for
+      <p> This packing list is a suggestion. So you don't forget some things.
+        You can costumize it any way you like. </br>
+        Beware that you are responsible for
       own belownings. the ETDS isn’t responsible for possessions that have gone
       missing or have been damaged. </p>
-
       <h2> Walking on shoes outside the dance floor is not permitted, so take
         some nice socks with you to walk on! Tip: you can buy glow in the dark
         socks</h2>
-
       <h2> General </h2>
       <ul id="packing">
-      <li> ID card/passport </li>
-      <li> Money (cash) </li>
-      <li> Student card / proof of school registration </li>
-    </ul>
+        <li> ID card/passport </li>
+        <li> Money (cash) </li>
+        <li> Student card / proof of school registration </li>
+        <li> Phone </li>
+        <li> Phone charger </li>
+        <li> Extension cord / distribution plug </li>
+      </ul>
+      <h2>Competition</h2>
+      <ul id="packing">
+      <li>Dancing shoes for ballroom and latin</li>
+      <li>Scratcher for your shoes</li>
+      <li>blister pads</li>
+      <li>Sheer tights</li>
+      <li>Dancing outfit for ballroom and latin </li>
+      <li>small pants/boxer for under your skirt</li>
+      <li>Association hoody (if you have one)</li>
+      <li>Make-up</li>
+      <li>Hairstyling stuff</li>
+      <li>Hairspray or gel</li>
+      <li>Glim and glam (for your ears, for your hair etc.)</li>
+      <li>Table mirror</li>
+      <li>Theme team outfit (for teampresentation)</li>
+      <li>Comfortable clothes (for after the competition, like a onesie)</li>
+      <li>Slippers/comfy socks</li>
+      </ul>
+      <h2>Party/Gala</h2>
+      <ul id = "packing">
+        <li>Theme party outfit</li>
+        <li>Gala outfit</li>
+        <li>Make-up</li>
+      </ul>
+      <h2> Survival </h2>
+      <ul id="packing">
+        <li>Air bed / mattress</li>
+        <li>Pump</li>
+        <li>Sleeping bag/Blanket & sheets</li>
+        <li>Pillow</li>
+        <li>Pajamas</li>
+        <li>Sleeping mask</li>
+        <li>Ear plugs</li>
+        <li>Flash light</li>
+        <li>Tooth brush + tooth paste</li>
+        <li>Hair brush</li>
+        <li>Conditioner, shampoo and Shower gel</li>
+        <li>Towel</li>
+        <li>Flipflops</li>
+        <li>Make-up remover</li>
+        <li>Deodorant</li>
+        <li>Shaving materials</li>
+      </ul>
+
+    </br></br>
+      <p>You don’t have to bring your own plate, cup and cutlery. They will be provided.</p>
 
     </div>
     <div class="footer" id="footer">
