update registration and volunteer text

--- a/registration.html
+++ b/registration.html
@@ -53,10 +53,11 @@
     <p>Teamcaptains have to register you. Please ask your local dance society
       for the contact information of your teamcaptain. If you have trouble
       finding your teamcaptains contact us</br></br>
-      We have 600 spots for the tournament. We will announce the registation deadline soon.
-      After the registration the system will draft names, so for
-      couples who are registered together, you will get in together. <br />
-      The cancelation policy will be anounced.
+      We have 600 spots for the tournament. After the registration the system
+      will draft names otherwise known as the lottery. The lottery will start 3
+      months before the etds. We will announce the registation deadline soon. </br>
+      For dance-couples: If you are registered together, you will get in together or
+      you are out together. <br/>
     </p>
     <h1> ETDS dashboard </h1>
     <!-- <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard" target="_blank"> XTDS DASHBOARD </a> </div> -->
