--- a/registration.html
+++ b/registration.html
@@ -52,10 +52,10 @@
     <h1>Registration</h1>
     <p>Teamcaptains have to register you. Please ask your local dance society
       for the contact information of your teamcaptain. If you have trouble
-      finding your teamcaptains contact us</br></br>
-      We have 600 spots for the tournament. After the registration the system
-      will draft names otherwise known as the lottery. The lottery will start 3
-      months before the etds. We will announce the registation deadline soon. </br>
+      finding your teamcaptains  <a href="mailto:etds.amsterdam@gmail.com" id="maillink"><b>contact us.</b></a></br></br>
+      We have 600 spots for the tournament. After the registration the system,
+      otherwise known as the lottery will draft names. The lottery will start 3
+      months before the ETDS. We will announce the registation deadline soon. </br>
       For dance-couples: If you are registered together, you will get in together or
       you are out together. <br/>
     </p>
@@ -63,7 +63,7 @@
     <!-- <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard" target="_blank"> XTDS DASHBOARD </a> </div> -->
     <div class = "dashboard-btn"> <a href="registration.html"> XTDS DASHBOARD </a> </div>
     <p></br>
-    This is where you can log on as team captain to register couples, update
+    This is where you can log on as teamcaptain to register particpants, update
     information and check your registrations. </p>
 
   </div>
