Added in correct link for mailing

--- a/faq.html
+++ b/faq.html
@@ -191,7 +191,7 @@
             </g>
           </g>
         </svg>
-        <p class="footer-txt"> <a href="etds.amsterdam@gmail.com" target="_blank" >etds.amsterdam@gmail.com</a>  </p>
+        <p class="footer-txt"> <a href="mailto:etds.amsterdam@gmail.com" target="_blank" >etds.amsterdam@gmail.com</a>  </p>
 
       </div>
     </div>
