Updated spell mistakes

--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
       <p> We are happy to host the 63th ETDS for you! The ETDS will start from
       <b>May 29th</b> to  <b>June 1st, 2020</b>. Hopefully we will see you all there! <br/>
       On this website you can find all the information about the ETDS Amsterdam 2020.
-      If your not familiar with the term ETDS please read the information below. </p>
-      <h1> Introduction video & Theme anouncement </h1>
+      If you're not familiar with the term ETDS please read the information below. </p>
+      <h1> Introduction video & Theme announcement </h1>
       <div style="text-align:center">
         <iframe src="https://drive.google.com/file/d/1dQzoL3kfh5O_fqGrFKdgoVT86A6-62Zi/preview"
         width="640" height="480"></iframe>
@@ -74,12 +74,12 @@
         <h1> What is the ETDS? </h1>
         <p> The ETDS also known as the <b>E</b>uropean <b>T</b>ournament for
         <b>D</b>ancing <b>S</b>tudents is a large ballroom dancing tournament
-        attracting hunderds of dancers from Europe. The tournament is hosted
+        attracting hundreds of dancers from Europe. The tournament has hosted
         twice a year since 1989. This time the ETDS will compete for 'Der Maus'
         in Amsterdam. <br/><br/>
         All dancers can compete in the tournament, which is spread over two days.
-        For each dancer there are two competitions to join, standard and latin.
-        The standard dances consisting out of English Waltz, Tango, Quickstep,
+        For each dancer there are two competitions to join, Standard and Latin.
+        The Standard dances consisting out of Slow Waltz, Tango, Quickstep,
         and for higher levels Slow Foxtrot and and Viennise Waltz. The Latin
         dances consist out of Chachacha, Rumba, Jive, and for higher levels,
         Samba and Paso doble. <br/><br/>
