--- a/packinglist.html
+++ b/packinglist.html
@@ -53,7 +53,7 @@
       <p> This packing list is a suggestion. So you don't forget some things.
         You can costumize it any way you like. </br>
         Beware that you are responsible for
-      own belownings. the ETDS isn’t responsible for possessions that have gone
+      own belownings. The ETDS isn’t responsible for personal belongings that have gone
       missing or have been damaged. </p>
       <h2> Walking on shoes outside the dance floor is not permitted, so take
         some nice socks with you to walk on! Tip: you can buy glow in the dark
