--- a/program.html
+++ b/program.html
@@ -124,11 +124,11 @@
         </tr>
         <tr>
           <td> 17:45 - 18:30 </td>
-          <td> Prices </td>
+          <td> Award Ceremony </td>
         </tr>
         <tr>
           <td> 18:30 - 20:00 </td>
-          <td> Diner </td>
+          <td> Dinner </td>
         </tr>
         <tr>
           <td> 20:00 - late </td>
@@ -195,11 +195,11 @@
         </tr>
         <tr>
           <td> 17:30 - 18:15 </td>
-          <td> Prices </td>
+          <td> Award Ceremony </td>
         </tr>
         <tr>
           <td> 20:00 - 21:00 </td>
-          <td> Diner </td>
+          <td> Dinner </td>
         </tr>
         <tr>
           <td> 20:00 - late </td>
