--- a/tournament.html
+++ b/tournament.html
@@ -52,12 +52,12 @@
     <h1>ETDS</h1>
       <p> The ETDS also known as the <b>E</b>uropean <b>T</b>ournament for
       <b>D</b>ancing <b>S</b>tudents is a large ballroom dancing tournament
-      attracting hunderds of dancers from Europe. The tournament is hosted
+      attracting hundreds of dancers from Europe. The tournament has been hosted
       twice a year since 1989. This time the ETDS will compete for 'Der Maus'
       in Amsterdam. <br/><br/>
       All dancers can compete in the tournament, which is spread over two days.
-      For each dancer there are two competitions to join, standard and latin.
-      The standard dances consisting out of English Waltz, Tango, Quickstep,
+      For each dancer there are two competitions to join, Standard and latin.
+      The Standard dances consisting out of Slow Waltz, Tango, Quickstep,
       and for higher levels Slow Foxtrot and and Viennise Waltz. The Latin
       dances consist out of Chachacha, Rumba, Jive, and for higher levels,
       Samba and Paso doble. <br/><br/>
@@ -65,8 +65,8 @@
       activities planned, and two great parties. <br/><br/>
       </p>
       <h1> Classes </h1>
-      <p> There are two main classes: Breitensport and CloseD/Open. If your are a
-      recreational dancer (non-competion) or beginner you're probably in the Breitensport.
+      <p> There are two starting groups: Breitensport and CloseD/Open. If your are a
+      recreational dancer (non-competition) or beginner you're probably in the Breitensport.
       If you dance competitions, it will be depending on your competition level.
       Check the overview at the bottom of the page. </p>
       <h1> Breitensport </h1>
@@ -138,7 +138,7 @@
       <h1> Blind dating </h1>
       <p> No partner? You can still sign up! </br>
       The lottery system will equally distribute leaders and followers.
-      As long as people dont fuck up the system (by not showing etc, SO DON'T!),
+      As long as people dont mess with the system (by not showing etc, SO DON'T!),
       there will be a dance partner for everyone!
       To find a partner we have a blind date rounds on friday and saterday evening.
       During these rounds all other partnerless (or mandotory blinddaters) are
