Used word for spell checker, removed all obvious mistakes.

--- a/costs.html
+++ b/costs.html
@@ -51,8 +51,8 @@
     <div class="main" id="main">
       <h1>Costs </h1>
       Below you'll find an indication of the prices for the ETDS Amsterdam in 2020.
-      The prices are not definite yet, and can be subject to change. Check our
-      website regulary for the latest prices.
+      The prices are not definite yet and can be subject to change. Check our
+      website regularly for the latest prices.
       Your teamcaptains will be informed shortly before the registation about the
       definitive price. </br></br>
       <table>
