--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     <div class="main" id="main">
       <h1> Welcome everyone</h1>
-      <p> We are happy to host the 63th ETDS for you! The ETDS will start from
+      <p> We are happy to host the 63rd ETDS for you! The ETDS will start from
       <b>May 29th</b> to  <b>June 1st, 2020</b>. Hopefully we will see you all there! <br/>
       On this website you can find all the information about the ETDS Amsterdam 2020.
       If you're not familiar with the term ETDS please read the information below. </p>
@@ -61,13 +61,13 @@
       </div>
       <h1> Theme </h1>
       <p> In our capital city we like to party. And we like to party in style!
-      So put on your neon colored outfit and party with us.  The theme of the
-      63th ETDS is Amsterdam, the blacklight district. </br></br>
+      So put on your neon coloured outfit and party with us.  The theme of the
+      63rd ETDS is Amsterdam, the blacklight district. </br></br>
       If you fancy some blacklight make-up or paint, GO FOR IT! There
       will be blacklights present on the theme party! And yes boys and girls
       <b>blacklight glitters also exists </b> ♥ !!
-      We will expect your best and extravagant self in blacklight! Sou you at
-      the compentition (party).</p>
+      We will expect your best and extravagant self in blacklight! See you at
+      the competition (party).</p>
       <div class="photo1 photocontainer"></div>
       <div class="photo2 photocontainer"></div>
       <div class="photo3 photocontainer"></div>
@@ -80,10 +80,10 @@
         All dancers can compete in the tournament, which is spread over two days.
         For each dancer there are two competitions to join, Standard and Latin.
         The Standard dances consisting out of Slow Waltz, Tango, Quickstep,
-        and for higher levels Slow Foxtrot and and Viennise Waltz. The Latin
+        and for higher levels Slow Foxtrot and the Viennese Waltz. The Latin
         dances consist out of Chachacha, Rumba, Jive, and for higher levels,
         Samba and Paso doble. <br/><br/>
-        This tournament is not only about competing. The are an multitude of fun
+        This tournament is not only about competing. The are a multitude of fun
         activities planned, and two great parties. <br/><br/>
     </div>
     <div class="footer" id="footer">
