--- a/location.html
+++ b/location.html
@@ -73,29 +73,29 @@
       Here you can find all the information about what platform you'll need.
     </p>
     <h2> Train </h2>
-    <p> There are 3 stations near to the USC. Depending on where you traveling
+    <p> There are 3 stations near to the USC. Depending on where you are traveling
       from you can choose between Science park, Muiderpoort or Amstel. From
       Muiderpoort and Amstel Station you can than take a bus to the USC.</br></br>
     <b> From Amsterdam Central / Science Park </b> </br>
-      If your traveling from amsterdam central, we recommend to take the train to Amsterdam
+      If your traveling from Amsterdam central, we recommend taking the train to Amsterdam
       Science park. It is only 2 stops from central. </br>
       From science park it is only 10 minutes walk to the USC Universum.</p>
       <iframe class="location" src="https://www.google.com/maps/embed?pb=!1m28!1m12!1m3!1d2436.870789940443!2d4.950581565343472!3d52.354628706224666!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m13!3e2!4m5!1s0x47c6095c95e36775%3A0xf81b65f1590b45ad!2sAmsterdam%20Science%20Park%2C%20Amsterdam!3m2!1d52.3530008!2d4.948362899999999!4m5!1s0x47c6094451b3ab91%3A0x86f7024a946221ca!2sSportcentrum%20Universum%2C%20Science%20Park%2C%20Amsterdam!3m2!1d52.355847!2d4.956958!5e0!3m2!1snl!2snl!4v1570221903717!5m2!1snl!2snl" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     <p>
-        From Amsterdam central it is only two trainstops to Amsterdam Science
+        From Amsterdam central it is only two train stops to Amsterdam Science
         park.
     </p>
     <h2> Bus (From Amstel station or Muiderpoort station) </h2>
     <p>
       From Amstel station and Muiderpoort station you can get the bus 40 to
-      Muiderpoort station respectivetly to Amstel station. The busstop is
+      Muiderpoort station respectively  to Amstel station. The bus stop is
       Science Park Aqua, which is in front of the USC Universum.
       At the Amstelstation you can also take bus 240, which also stops at science
       Park Aqua.
     </p>
     <h2> Bike (from Amstel station or Muiderpoort station) </h2>
     <p> You can also hire a public transport bike at Amstel station and
-      Muiderpoort station. The bike costs 3.85 eur/24 hours for the first 72 hours.
+      Muiderpoort station. The bike costs 3.85 eur per 24 hours for the first 72 hours.
       After 72 hours, you will incur an additional charge of € 5 per 24-hour period.
       You will need a personal OV-chipkaart on which you can load a free abonnement
       which allow you to rent bikes (which is not free).
@@ -104,21 +104,21 @@
     <p>
       We have limited parking available at the location Science Park. It is
       possible to park around the Science Park, but it will be payed parking.
-      Our tip is to park outside amsterdam to try circumvent paying expensive
+      Our tip is to park outside Amsterdam to try and circumvent paying expensive
       parking rates.
       Here are some possible locations: </br></br>
           <b> P+R Weesp/Leeuwenveld. </b> </br>
-          374 parkingspots </br>
+          374 parking spots </br>
           Click <a href="https://goo.gl/maps/eRo4JiPASajs8icW6"> here </a> for location on Google Maps. </br>
           From here it is a 9 min train ride to Amsterdam Science Park. </br>
           Due to fusion with Amsterdam, the parkingfees in Weesp can change,
           so be sure to check parking rates before you park </br></br>
           <b> P+R Diemen </b> </br>
-          128 parkingspots </br>
+          128 parking spots </br>
           Click <a href="https://goo.gl/maps/1NtrKXSQMvqpRGjRA">here </a> for location on Google Maps. </br>
           From here it is a 2 min train ride to Science Park. </br></br>
           <b>P+R Almere Muziekwijk</b></br>
-          345 parkingspots </br>
+          345 parking spots </br>
           Click <a href="https://goo.gl/maps/eA2Z8KJFURU4wx1h8"> here </a> for location on Google Maps. </br>
           From here it is a 19 min train ride to Science Park. </br></br>
 
