--- a/menu.html
+++ b/menu.html
@@ -82,8 +82,8 @@
         </tr>
         <tr>
           <th> Saturday Evening</td>
-          <td><b>Dinner:</b> <br /> Lasagne bolognese with mixed salad </td>
-          <td><b>Dinner:</b> <br /> White Rice with a red vegatable curry </td>
+          <td><b>Dinner:</b> <br /> Lasagne Bolognese with mixed salad </td>
+          <td><b>Dinner:</b> <br /> White Rice with a red vegetable curry </td>
         </tr>
         <tr>
           <th> Sunday Morning</td>
@@ -103,14 +103,14 @@
               <li id="MenuList">White Rice</li>
               <li id="MenuList">Ayam Ketjap</li>
               <li id="MenuList">Sambal Goreng with green beans</li>
-              <li id="MenuList">Gado Gado ( Cold vegatable dish )</li>
+              <li id="MenuList">Gado Gado ( Cold vegetable dish )</li>
               <li id="MenuList">Bami</li>
               <li id="MenuList">Kroepoek, Sambal and Atjar Tjampoer</li>
             </ul>
             <br />
             <b>Dessert:</b>
             <ul id="MenuListUL">
-              <li id="MenuList">Tasty dessert (Custard or fruitsalad)</li>
+              <li id="MenuList">Tasty dessert (Custard or fruit salad)</li>
             </ul>
           </td>
           <td>
@@ -119,14 +119,14 @@
               <li id="MenuList">White Rice</li>
               <li id="MenuList">Sambal Goreng with green beans</li>
               <li id="MenuList">Sayur Lodeh ( vegatable in coconutmilk )</li>
-              <li id="MenuList">Gado Gado ( Cold vegatable dish )</li>
+              <li id="MenuList">Gado Gado ( Cold vegetable dish )</li>
               <li id="MenuList">vega mihoen</li>
               <li id="MenuList">Sambal and Atjar Tjampoer</li>
             </ul>
             <br />
             <b>Dessert:</b>
             <ul id="MenuListUL">
-              <li id="MenuList">Tasty dessert (Custard or fruitsalad)</li>
+              <li id="MenuList">Tasty dessert (Custard or fruit salad)</li>
             </ul>
           </td>
         </tr>
