--- a/packinglist.html
+++ b/packinglist.html
@@ -50,8 +50,7 @@
     </div>
     <div class="main" id="main">
       <h1>Packing List</h1>
-      <p> This packing list is a suggestion. So you don't forget some things.
-        You can costumize it any way you like. </br>
+      <p> This packing list is a suggestion. You can customize it any way you like. </br>
         Beware that you are responsible for
       own belownings. The ETDS isn’t responsible for personal belongings that have gone
       missing or have been damaged. </p>
@@ -69,11 +68,11 @@
       </ul>
       <h2>Competition</h2>
       <ul id="packing">
-      <li>Dancing shoes for ballroom and latin</li>
+      <li>Dancing shoes for ballroom and Latin</li>
       <li>Scratcher for your shoes</li>
       <li>blister pads</li>
       <li>Sheer tights</li>
-      <li>Dancing outfit for ballroom and latin </li>
+      <li>Dancing outfit for ballroom and Latin </li>
       <li>small pants/boxer for under your skirt</li>
       <li>Association hoody (if you have one)</li>
       <li>Make-up</li>
@@ -81,7 +80,7 @@
       <li>Hairspray or gel</li>
       <li>Glim and glam (for your ears, for your hair etc.)</li>
       <li>Table mirror</li>
-      <li>Theme team outfit (for teampresentation)</li>
+      <li>Theme team outfit (for team presentation)</li>
       <li>Comfortable clothes (for after the competition, like a onesie)</li>
       <li>Slippers/comfy socks</li>
       </ul>
@@ -97,12 +96,12 @@
         <li>Pump</li>
         <li>Sleeping bag/Blanket & sheets</li>
         <li>Pillow</li>
-        <li>Pajamas</li>
+        <li>Pyjamas</li>
         <li>Sleeping mask</li>
         <li>Ear plugs</li>
-        <li>Flash light</li>
-        <li>Tooth brush + tooth paste</li>
-        <li>Hair brush</li>
+        <li>Flashlight</li>
+        <li>Toothbrush + toothpaste</li>
+        <li>Hairbrush</li>
         <li>Conditioner, shampoo and Shower gel</li>
         <li>Towel</li>
         <li>Flipflops</li>
