--- a/tournament.html
+++ b/tournament.html
@@ -56,23 +56,23 @@
       twice a year since 1989. This time the ETDS will compete for 'Der Maus'
       in Amsterdam. <br/><br/>
       All dancers can compete in the tournament, which is spread over two days.
-      For each dancer there are two competitions to join, Standard and latin.
+      For each dancer there are two competitions to join, Standard and Latin.
       The Standard dances consisting out of Slow Waltz, Tango, Quickstep,
-      and for higher levels Slow Foxtrot and and Viennise Waltz. The Latin
+      and for higher levels Slow Foxtrot and the Viennese Waltz. The Latin
       dances consist out of Chachacha, Rumba, Jive, and for higher levels,
       Samba and Paso doble. <br/><br/>
-      This tournament is not only about competing. The are an multitude of fun
+      This tournament is not only about competing. The are a multitude of fun
       activities planned, and two great parties. <br/><br/>
       </p>
       <h1> Classes </h1>
-      <p> There are two starting groups: Breitensport and CloseD/Open. If your are a
+      <p> There are two starting groups: Breitensport and CloseD/Open. If you're are a
       recreational dancer (non-competition) or beginner you're probably in the Breitensport.
       If you dance competitions, it will be depending on your competition level.
       Check the overview at the bottom of the page. </p>
       <h1> Breitensport </h1>
       <p> This class contains subclasses (in ascending level): Amateurs, Professionals,
       Masters and Champions. <br/>
-      There will be a qualification round with all Breitersport dancers, to determine in which level you will continue
+      There will be a qualification round with all Breitensport dancers, to determine in which level you will continue
       the competition. </p>
       <h1> Breitensport or ClosedD/Open? </h1>
       <table>
@@ -137,20 +137,19 @@
 
       <h1> Blind dating </h1>
       <p> No partner? You can still sign up! </br>
-      The lottery system will equally distribute leaders and followers.
-      As long as people dont mess with the system (by not showing etc, SO DON'T!),
+      The lottery system will equally distribute leaders and followers and
+      people do not mess with the system (by not showing etc, SO DON'T!),
       there will be a dance partner for everyone!
-      To find a partner we have a blind date rounds on friday and saterday evening.
-      During these rounds all other partnerless (or mandotory blinddaters) are
+      To find a partner we have blind date rounds on Friday and Saturday evening.
+      During these rounds all without a partner (or mandatory blinddaters) are
       recognizably marked for you to invite to dance with you. If you like the
       specimen you are dancing with, you can together register at the tournament office.
     </p>
     <h1> Mandatory Blind Dating </h1>
     <p> For the (super) experienced of us dancers there is a mandatory blind dating.
-    This way you will have another face to look at, than that of your usual dance partner.
-    But above all, than you wont be so darn good. Give other people also a chance to win!
-    Or you can try to defeat your partner. Whatever floats your boat. As long
-    as you just do not dance with your regular partner.</br>
+    This way you will have another face to look at, then that of your usual dance partner.
+    But above all, then you wont be so darn good. Give other people also a chance to win!
+    Or you can try to defeat your partner.</br>
     The table below shows form what level blind dating will be mandatory. </br></br> </p>
 
     <table>
@@ -193,7 +192,7 @@
     </table>
 
     <h1> Ballroom dances </h1>
-    <p> Afraid you suddenly have to dance a slow fox? Check below to see which dances belong to which rounds. </p></br>
+    <p> Afraid you suddenly must dance a Slowfox? Check below to see which dances belong to which rounds. </p></br>
   </br>
 <table>
     <tr>
@@ -249,7 +248,7 @@
 </table>
 
 <h1> Latin dances </h1>
-<p> Afraid you suddenly have to dance a paso? Check below to see which dances belong to which rounds. </p></br>
+<p> Afraid you suddenly must dance a Paso doble? Check below to see which dances belong to which rounds. </p></br>
 </br>
 <table>
 <tr>
