--- a/faq.html
+++ b/faq.html
@@ -55,9 +55,9 @@
         You can register with your teamcaptains, they will sign you up for the lottery.
         You will hear from your teamcaptain if you are got in or not. </br></br>
         <b> How do I pay for the ETDS? </b> </br>
-        We get our payments from your teamcaptains. So you will transfer the money
+        We get our payments from your teamcaptains. So, you will transfer the money
         to your teampcaptains (they will provide you with their bankaccount for such affairs).
-        And they transfer the money for all the teammembers that got in to us,
+        And they transfer the money for all the teammembers that got in, to us,
          including a list who payed. </br></br>
         <b> I  don’t have a partner, can I still participate? </b> </br>
         Yes, you sign up without a partner. You will have to find a partner at
