--- a/registration.html
+++ b/registration.html
@@ -54,8 +54,8 @@
       for the contact information of your teamcaptain. If you have trouble
       finding your teamcaptains  <a href="mailto:etds.amsterdam@gmail.com" id="maillink"><b>contact us.</b></a></br></br>
       We have 600 spots for the tournament. After the registration the system,
-      otherwise known as the lottery will draft names. The lottery will start 3
-      months before the ETDS. We will announce the registation deadline soon. </br>
+      otherwise known as the lottery, will draft names. The lottery will start 3
+      months before the ETDS. We will announce the registration deadline soon. </br>
       For dance-couples: If you are registered together, you will get in together or
       you are out together. <br/>
     </p>
@@ -63,7 +63,7 @@
     <!-- <div class = "dashboard-btn"> <a href="https://xtds.nl/dashboard" target="_blank"> XTDS DASHBOARD </a> </div> -->
     <div class = "dashboard-btn"> <a href="registration.html"> XTDS DASHBOARD </a> </div>
     <p></br>
-    This is where you can log on as teamcaptain to register particpants, update
+    This is where you can log on as teamcaptain to register participants, update
     information and check your registrations. </p>
 
   </div>
