--- a/volunteer.html
+++ b/volunteer.html
@@ -52,19 +52,19 @@
     <h1>Mandatory Shifts</h1>
     <p> A large event as the ETDS needs a lot of helping hands. Without people helping
       out ETDS's couldn't take place. This is why teams are mandatory to do
-      a minimal amount of hours for shifts. </p>
+      a minimal number of hours for shifts. </p>
 
     <h1>Volunteer shifts</h1>
-    <p>Besides the mandatory shifts we can use every other shift hours you are willing
+    <p>Besides the mandatory shifts we can use every other shift hour you are willing
     to offer us! </br>
-    With doing volunteer shifts beside your mandatory shift you can also earn bonuspoints
+    With doing volunteer shifts beside your mandatory shift you can also earn bonus points
     for your team!</p> </br>
 
     <h1>Super volunteer</h1>
     <p> As a super volunteer you will receive food and a sleeping spot on the
       ETDS in exchange for volunteer hours.</br> <b> !As a super volunteer you will
         not be able to participate in the tournaments! </b>, but of course you
-          can join the parties and enjoy the athmosfere.</p>
+          can join the parties and enjoy the atmosphere.</p>
         </br>
 
     <p><b> It is not possible to inscribe for shifts yet. </b></p>
